# ArknightsDpsCompare

./: .gitignore  .gitmodules  BotGuide.txt  README.md  bot_guide.txt  damageformulas.py  discoBot.py  disco_bot.py  healing_formulas.py  healingformulas.py  pyproject.toml  requirements.txt
Database/: JsonReader.py  StageAnimator.py  json_data.pkl
damagecalc/: commands.py  damage_formulas.py  healing_formulas.py  utils.py
